--- a/.gitignore
+++ b/.gitignore
@@ -27,12 +27,12 @@ out/
 !**/src/test/**/out/
 
 ### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-/node_modules/
+**/nbproject/private/**
+**/nbbuild/**
+**/dist/**
+**/nbdist/**
+**/.nb-gradle/**
+**/node_modules/**
 
 ### VS Code ###
 .vscode/
