--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,6 @@ spring:
   profiles:
     default: home
     group:
-      home:
-        - "home"
-      daul:
-        - "dual"
+      home: config,home-profile
+      dual: config,dual-profile
 
