--- a/src/main/resources/application-home-profile.yml
+++ b/src/main/resources/application-home-profile.yml
@@ -1,12 +1,3 @@
-database:
-  url: jdbc:mysql://localhost:3306/
-  username: root
-  password: 8310
-
-server:
-  address: localhost
-  port: 8080
-
 spring:
   config:
     activate:
@@ -14,9 +5,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${database.url}
-    username: ${database.username}
-    password: ${database.password}
+    url: ${home.database.url}
+    username: ${home.database.username}
+    password: ${home.database.password}
 
   jpa:
     properties:
@@ -29,7 +20,11 @@ spring:
       naming  :
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
   jwt:
-    secret: qwe123ewtqwtqewtwqetqwteqwgwqgweqgqgdasgdasgewfewvwvwevew
+    secret: ${jwtKey}
+
+server:
+  address: 0.0.0.0
+  port: 8080
 
 logging:
   level:
