--- a/src/main/resources/application-dual-profile.yml
+++ b/src/main/resources/application-dual-profile.yml
@@ -29,8 +29,8 @@ server:
   port: 8008
 
 logging:
-#  pattern:
-#    console: "%clr(%d{yy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr(%-35.35logger{34}){cyan}\t%m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
+  pattern:
+     console: "%clr(%d{yy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr(%-35.35logger{34}){cyan}\t%m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
   level:
     org:
       hibernate: debug
